# extraction-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pricemind_extraction/: __init__.py  encoding.py  js_transformers.py  selector.py
src/pricemind_extraction/extractors/: __init__.py  default.py
tests/: test_case.py  test_helpers.py  test_js_transformers.py  test_public_api.py  website.html
tests/extractors/: test_default.py
